src/App.css
html {
  background-color: var(--bg-primary);
  overflow-x: hidden;
  font-family: 'Nunito', 'Varela Round', 'sans-serif';
}

.all-critters-heading-container {
  font-size: 2.5rem;
  font-weight: 700;
}

.all-critters-heading {
  margin: 0;
}

.all-current-buttons-container {
  display: flex;
  position: absolute;
  top: 0;
  gap: 1.5em;
}

.top-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 14em;
  margin-top: 3em;
}

.caught-total-content,
.caught-total-heading,
.all-critters-heading-container {
  animation: bounceIn .1s ease-out;
  animation-fill-mode: forwards;
}

.hemisphere-buttons {
  animation: fadeIn .3s;
  color: var(--bg-secondary);
}

@keyframes bounceIn {
  0% {
    transform: scaleX(1.1);
  }

  100% {
    transform: scaleX(1);
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.hemisphere-buttons {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  gap: 1em;
  margin-bottom: 1em;
  font-size: 1.3rem;
  transition: font-size .5s;
}

.southern-hemisphere-button,
.northern-hemisphere-button {
  cursor: pointer;
  border: none;
  border-radius: 2em;
  width: 6em;
  font-size: 1.3rem;
  background: none;
  font-weight: 600;
  color: var(--bg-secondary);
  transition: transform 50ms ease-in-out, font-size .5s;
}

.hemisphere-buttons>h4 {
  margin: 0;
  font-weight: 800;
  font-size: 1.3rem;
  transition: font-size .5s;
}

.critter-button:hover .critter-button-icon {
  animation: shake 0.5s;
}

@keyframes shake {
  0% {
    transform: translate(2px, 2px) rotate(2deg)
  }
}

.active {
  background-color: var(--bg-secondary);
  color: var(--bg-primary);
}

.mid-buttons-container {
  display: flex;
  position: relative;
  justify-content: space-between;
  width: 90vw;
}

.mid-line {
  background: rgb(201, 186, 162);
  height: 0.1em;
  width: 100vw;
  margin-bottom: 0.5em;
}

.critter-buttons-container {
  display: flex;
  justify-content: flex-start;
}

.critter-button {
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  background-color: rgb(201, 186, 162);
  border-radius: 1em 1em 0 0;
  transition: background-color .2s, width .5s;
}

.critter-button-icon {
  width: 4em;
  transition: width .5s;
}

.critter-display-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.critter-display-content {
  display: flex;
  justify-content: center;
  width: 100vw;
  overflow-x: auto;
}

.critter-active {
  background-color: rgb(255, 183, 0);
}



.caught-buttons-container {
  display: flex;
  position: relative;
  align-items: flex-end;
  justify-content: flex-end;
  width: max-content;
  gap: 1em;
  height: 2em;
  margin-top: 1.8em;
}

.caught-mode-button,
.toggle-caught-button {
  cursor: pointer;
  font-size: 1rem;
  font-weight: 600;
  width: max-content;
  padding-left: 1em;
  padding-right: 1em;
  background: none;
  border: 1px var(--bg-secondary) solid;
  color: var(--bg-secondary);
  border-radius: 1em;
  transition: transform 50ms ease-in-out, font-size .5s;
}

.view-all-button,
.view-current-button {
  cursor: pointer;
  color: var(--bg-secondary);
  background: none;
  border: none;
  border-radius: 1em;
  font-size: 1rem;
  font-weight: 600;
  margin-top: 1em;
  width: max-content;
  padding-left: 1em;
  padding-right: 1em;
  transition: transform 50ms ease-in-out;
}

.caught .critter-entry-icon {
  opacity: 20%;
}

.caught-total-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 0.9em;
  margin-bottom: 1.2em;
  color: var(--bg-secondary);
}

.caught-total-heading {
  font-size: 2.5rem;
  font-weight: 700;
  margin: 0;
  margin-bottom: 0.5em;
}

.caught-total-content {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 2em;
  font-size: 2rem;
  font-weight: 600;
  transition: font-size .5s;
}

.critter-total-icon {
  width: 3em;
  background-color: rgba(148, 104, 104, 0.607);
  border-radius: 1em;
}

.critter-total {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.critter-entry {
  aspect-ratio: 1/1;
  cursor: pointer;
}

.critter-entry-icon {
  width: 4em;
  transition: transform 80ms ease-in-out, width .5s;
}

.entry-border {
  display: flex;
  padding: 0.5em;
  justify-content: center;
  align-items: center;
  position: relative;
  border: 0.1em solid rgb(201, 186, 162);
}

.tooltip {
  display: flex;
  position: absolute;
  justify-content: center;
  align-items: flex-start;
  margin-bottom: 3em;
  width: 6em;
  transition: transform 80ms ease-in-out;
}

.tooltip-text {
  visibility: hidden;
  font-size: 0.7rem;
  font-weight: 600;
  width: max-content;
  padding: 0.5em;
  border-radius: 1em;
  color: var(--bg-primary);
  background-color: var(--bg-secondary);
  white-space: nowrap;
  z-index: 1;
  transition: transform 80ms ease-in-out;
}

.unavailable {
  visibility: hidden;
}

.critter-modal,
.overlay {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 100vh;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  position: fixed;
}

.overlay {
  background-color: rgba(0, 0, 0, 0.422);
}

.modal-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-radius: 2em;
  background-color: var(--bg-primary);
  z-index: 1;
  width: 100vw;
  padding-bottom: 3em;
  gap: 1em;
  overflow-y: scroll;
}

.close-modal {
  border: none;
  background: var(--bg-secondary);
  color: var(--bg-primary);
  padding: 0.7em;
  padding-left: 1.5em;
  padding-right: 1.5em;
  border-radius: 0.9em;
  font-weight: 1000;
  cursor: pointer;
  margin-top: 1.5em;
  margin-left: 87%;
}

.critter-name {
  margin-bottom: 0;
}

.critter-image {
  filter: drop-shadow(0.5em 0.8em 0.4em rgba(0, 0, 0, 0.5));
  height: 30vh;
  width: 100%;
  object-fit: scale-down;
}

.seasonality-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 80%;
}

.time-of-year-container {
  display: flex;
  gap: 2em;
}

.modal-hem-content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.modal-hem-content>p {
  font-size: 1.5rem;
}

h4,
p {
  margin: 0;
  margin-bottom: 0.5em;
}

.time-of-year-container>p {
  margin-bottom: 1em;
}

.time-of-day-container {
  font-size: 1.5rem;
  margin-bottom: 0.5em;
}

.all-year-container {
  font-size: 1.5rem;
}

.attributes-container {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 3em;
}

.active-modal {
  overflow: hidden;
}

@media not all and (hover: none) {
  button:hover {
    background: var(--bg-secondary);
    color: var(--bg-primary);
    font-weight: 700;
    transform: scale(1.1);
    transform-origin: center;
  }

  .critter-button:hover {
    background: rgb(255, 183, 0);
  }

  .entry-border:hover .critter-entry-icon {
    cursor: pointer;
    transform: scale(1.2);
    transform-origin: center;
  }

  .entry-border:hover .tooltip-text {
    visibility: visible;
    cursor: pointer;
    transform: scale(1.1);
    transform-origin: center;
  }

  .close-modal:hover {
    opacity: 70%;
  }

  .entry-border:hover .unavailable {
    visibility: hidden;
  }
}





/* Grid sizes on screen width changes */
@media screen and (max-width: 1313px) {
  .critter-entry-icon {
    width: 2.5em;
  }

  .tooltip-text {
    font-size: 0.4rem;
  }

  .tooltip {
    margin-bottom: 2.3em;
  }
}

@media screen and (max-width: 929px) {
  .default-disp-content {
    display: flex;
    justify-content: flex-start;
  }
}

@media screen and (max-width: 463px) {
  .sea-disp-content {
    display: flex;
    justify-content: flex-start;
  }
}

/*------------------------------*/

@media screen and (max-width: 584px) {

  .hemisphere-buttons,
  .hemisphere-buttons>h4,
  .southern-hemisphere-button,
  .northern-hemisphere-button {
    font-size: 1rem;
  }

  .critter-button-icon {
    width: 2em;
  }

  .critter-button {
    margin-top: 1.5em;
    width: 3em;
  }

  .caught-mode-button,
  .toggle-caught-button {
    font-size: 0.8rem;
    height: min-content;
    white-space: nowrap;
  }

  .caught-buttons-container {
    margin-top: 1.3em;
  }

  .caught-total-content {
    font-size: 1.6rem;
  }

  .view-all-button,
  .view-current-button {
    font-size: 0.8rem;
  }
}

@media screen and (max-width: 450px) {

  .hemisphere-buttons,
  .hemisphere-buttons>h4,
  .southern-hemisphere-button,
  .northern-hemisphere-button {
    font-size: 0.8rem;
  }

  .caught-mode-button,
  .toggle-caught-button {
    font-size: 0.6rem;
    height: min-content;
    white-space: nowrap;
  }

  .caught-buttons-container {
    margin-top: 0.9em;
    gap: 0.5em;
  }

  .caught-total-content {
    font-size: 1.3rem;
  }

  .critter-button-icon {
    width: 1.5em;
  }

  .critter-button {
    width: 2em;
  }
}

@media screen and (max-width: 290px) {

  .hemisphere-buttons,
  .hemisphere-buttons>h4,
  .southern-hemisphere-button,
  .northern-hemisphere-button {
    font-size: 0.7rem;
  }

  .caught-mode-button,
  .toggle-caught-button {
    font-size: 0.5rem;
    height: min-content;
    white-space: nowrap;
  }

  .caught-buttons-container {
    gap: 0.4em;
  }
}


@media screen and (min-width: 100px) {
  .modal-content {
    width: 80vw;
  }

  .modal-hem-content>p {
    font-size: 1rem;
  }

  .all-year-container,
  .time-of-day-container {
    font-size: 1.2rem;
  }

  .modal-hem-heading {
    width: min-content;
  }

  .attributes-container {
    font-size: 0.8rem;
  }

  .close-modal {
    font-size: 0.8rem;
    padding: 0.5em;
    padding-left: 1em;
    padding-right: 1em;
    margin-left: 80%;
  }
}

@media screen and (min-width: 800px) {
  .modal-content {
    width: 80vw;
  }

  .modal-hem-heading {
    width: max-content;
  }
}

@media screen and (min-width: 1100px) {
  .modal-content {
    width: 60vw;
  }
}

@media screen and (min-width: 1450px) {
  .modal-content {
    width: 50vw;
  }
}

